changed it so the files aren't confusing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+div.all{
+  font-family:courier,arial,helvetica;
+}
+
 .fade-inT {
     animation: fadeIn ease 2s;
     -webkit-animation: fadeIn ease 2s;
